interested page created

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,38 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
+  <ion-navbar color="dark">
+    <ion-grid>
+
+      <ion-row align-items-start>
+        <ion-col col-1>
+          <button menuToggle ion-button>
+            <ion-icon name="menu"></ion-icon>
+          </button>
+        </ion-col>
+        <ion-col align-self-center>
+          <ion-title>Home</ion-title>
+        </ion-col>
+      </ion-row>
+      <ion-row justify-content-center>
+        <!--&lt;!&ndash;</ion-col>&ndash;&gt;-->
+        <ion-col col-11>
+          <ion-searchbar
+            [(ngModel)]="myInput"
+            [showCancelButton]="false"
+            (ionInput)="onInput($event)"
+            (ionCancel)="onCancel($event)">
+          </ion-searchbar>
+        </ion-col>
+      </ion-row>
+      <!--</ion-row>-->
+    </ion-grid>
+
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+
+  <button ion-button (click)="routeToDetails()"> GO!</button>
+
+  <page-search-result></page-search-result>
+
 </ion-content>
