--- a/src/pages/interests/interests.html
+++ b/src/pages/interests/interests.html
@@ -1,44 +1,48 @@
-<!--
-  Generated template for the InterestsPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar color="dark">
     <!--<ion-row>-->
-      <ion-title>Choose your Interests</ion-title>
+    <ion-title>Choose your Interests</ion-title>
     <ion-buttons end>
-      <button ion-button clear color="light" padding>skip</button>
+      <button ion-button clear color="light" padding (click)="routeToLocation()">skip</button>
     </ion-buttons>
     <!--</ion-row>-->
   </ion-navbar>
 
 </ion-header>
 
+<ion-content color="secondary" padding>
 
-<ion-content padding>
+  <ion-list *ngFor="let category of serverCategories | sort : ['id']">
 
-  <ion-grid>
-    <ion-row justify-content-start>
-      <ion-col col-6 col-sm-4 *ngFor="let category of serverCategories">
-        <ion-card class="category-card" (click)="addToUserCategory(category)">
-          <div class="check-badge" *ngIf="userCategories?.includes(category)">
-            <div class="check-icon">
-              <ion-icon name="checkmark" color="light"></ion-icon>
+    <ion-item-divider color="secondary">
+      <span>{{category?.mainCategory}}</span>
+    </ion-item-divider>
+
+    <ion-grid>
+      <ion-row justify-content-start>
+        <ion-col col-6 col-sm-4 *ngFor="let subCategory of category.subCategories">
+          <ion-card class="category-card" (click)="addToUserCategory(subCategory)">
+            <div class="check-badge" *ngIf="userCategories?.includes(subCategory)">
+              <div class="check-icon">
+                <ion-icon name="checkmark" color="light"></ion-icon>
+              </div>
             </div>
-          </div>
-          <img [src]="category.image"/>
-          <h2>{{category.name}}</h2>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+            <img [src]="subCategory.image"/>
+            <h4>{{subCategory.name}}</h4>
+          </ion-card>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-list>
+
+<div class="footer-placholder">
+</div>
 
 </ion-content>
 
-<ion-footer [ngStyle]="toggleFooter()" class="footer">
+<ion-footer [ngStyle]="footerStatus" class="footer">
   <ion-toolbar color="dark">
     <ion-buttons end>
       <button color="light" (click)="submitCategories()" ion-button padding>
