minimal viable process

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
+  <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+
+
   <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
@@ -27,6 +30,7 @@
     }
   </script>-->
 
+  <!--<link rel="stylesheet" href="../src/theme/styles.css">-->
   <link href="build/main.css" rel="stylesheet">
 
 </head>
