--- a/src/pages/manually-location/manually-location.html
+++ b/src/pages/manually-location/manually-location.html
@@ -1,18 +1,43 @@
-<!--
-  Generated template for the ManuallyLocationPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="dark">
     <ion-title>Register location manually</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+  <img src="assets/images/map-image.jpg">
 
+  <form #location="ngForm" autocomplete="off" padding="">
+    <ion-list>
+
+      <ion-item>
+        <ion-label floating>City</ion-label>
+        <ion-input type="text" name="city" [(ngModel)]="city" required></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Area</ion-label>
+        <ion-input type="text" name="area" [(ngModel)]="area" required></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <span></span>
+      </ion-item>
+    </ion-list>
+    <!--<button type="submit">Submit</button>-->
+  </form>
 </ion-content>
+
+<ion-footer [ngStyle]="footerStatus" class="footer">
+  <ion-toolbar color="dark">
+    <ion-buttons end>
+      <button color="light" (click)="submitLocation(location.value)" ion-button padding>
+        Next
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
