--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,20 @@
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
 
+  <!--<script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>-->
+  <!--<script>-->
+    <!--// Initialize Firebase-->
+    <!--var config = {-->
+      <!--apiKey: "AIzaSyDYrrCt5GObIKP_IZ3rQSrDtfjoEtx9mrc",-->
+      <!--authDomain: "xsource-a0e3f.firebaseapp.com",-->
+      <!--databaseURL: "https://xsource-a0e3f.firebaseio.com",-->
+      <!--projectId: "xsource-a0e3f",-->
+      <!--storageBucket: "xsource-a0e3f.appspot.com",-->
+      <!--messagingSenderId: "60593959366"-->
+    <!--};-->
+    <!--firebase.initializeApp(config);-->
+  <!--</script>-->
+
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
 
