--- a/src/pages/questions/questions.html
+++ b/src/pages/questions/questions.html
@@ -42,7 +42,7 @@
     </ion-item>
   </ion-list>
 
-  <button (click)="postQuestions()" ion-button>
+  <button (click)="postQuestions()" color="dark" ion-button>
     <ion-icon name="send" class="icon-in-button"></ion-icon>
     Send
   </button>
