--- a/src/pages/forgot-password-pag/forgot-password-pag.html
+++ b/src/pages/forgot-password-pag/forgot-password-pag.html
@@ -1,18 +1,30 @@
-<!--
-  Generated template for the ForgotPasswordPagPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>forgot-password.pag</ion-title>
-  </ion-navbar>
+    <ion-navbar color="dark">
+        <ion-title>Forgot Password</ion-title>
+    </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+    <form class="margin-top-50" #forgetPassword="ngForm" (ngSubmit)="forgetPassword.valid && sendForgotPasswordEmail()">
+        <ion-list>
+            <ion-item>
+                <ion-label floating>Email</ion-label>
+                <ion-input name="email" color="dark" [(ngModel)]="email" required type="text"></ion-input>
+            </ion-item>
+            <xsource-error *ngIf="forgetPassword.submitted && forgetPassword?.controls?.email?.invalid"></xsource-error>
+
+            <ion-row justify-content-center>
+                <button ion-button col-6 type="submit" class="margin-top-50" color="dark"><i
+                        class="fa fa-send-o margin-right-5"></i><span>Send Email</span>
+                </button>
+            </ion-row>
+
+            <div></div>
+        </ion-list>
+    </form>
 
 </ion-content>
