--- a/src/pages/sign-in/sign-in.page.html
+++ b/src/pages/sign-in/sign-in.page.html
@@ -1,62 +1,62 @@
 <ion-header>
 
-  <ion-navbar color="dark" hideBackButton>
-    <ion-row>
-      <ion-col col-1>
-        <ion-buttons>
-          <button (click)="openMenu()" ion-button>
-            <ion-icon name="menu" class="menu-icon"></ion-icon>
-          </button>
-        </ion-buttons>
-      </ion-col>
-      <ion-col align-self-center>
-        <ion-title><span>Sign In</span></ion-title>
-      </ion-col>
-    </ion-row>
-  </ion-navbar>
+    <ion-navbar color="dark" hideBackButton>
+        <ion-row>
+            <ion-col col-1>
+                <ion-buttons>
+                    <button (click)="openMenu()" ion-button>
+                        <ion-icon name="menu" class="menu-icon"></ion-icon>
+                    </button>
+                </ion-buttons>
+            </ion-col>
+            <ion-col align-self-center>
+                <ion-title><span>Sign In</span></ion-title>
+            </ion-col>
+        </ion-row>
+    </ion-navbar>
 </ion-header>
-
 
 <ion-content padding>
 
-  <form #signInForm="ngForm" (ngSubmit)="signInForm.valid && signIn()" class="sign-in-form">
-    <ion-list>
-      <ion-item>
-        <ion-label floating>User Name/Email</ion-label>
-        <ion-input required name="email" [(ngModel)]="signInData.email" type="text"></ion-input>
-      </ion-item>
+    <form #signInForm="ngForm" (ngSubmit)="signInForm.valid && signIn()" class="sign-in-form">
+        <ion-list>
+            <ion-item>
+                <ion-label floating>User Name/Email</ion-label>
+                <ion-input (keyup)="bindEmailToSaved(signInData.email)" required name="email"
+                           [(ngModel)]="signInData.email" type="text"></ion-input>
+            </ion-item>
 
-      <ion-item>
-        <ion-label floating>Password</ion-label>
-        <ion-input required name="password" [(ngModel)]="signInData.password" type="password"></ion-input>
-      </ion-item>
+            <ion-item>
+                <ion-label floating>Password</ion-label>
+                <ion-input required name="password" [(ngModel)]="signInData.password" type="password"></ion-input>
+            </ion-item>
 
-      <div></div>
-    </ion-list>
+            <div></div>
+        </ion-list>
+
+        <ion-row>
+            <button col-12 ion-button type="submit" color="dark">Sign In</button>
+        </ion-row>
+    </form>
 
     <ion-row>
-      <button col-12 ion-button type="submit" color="dark">Sign In</button>
+        <ion-col col-6>
+            <button (click)="routwToForgotPassword()" col-12 ion-button clear>Forgot Password</button>
+        </ion-col>
+        <ion-col col-6>
+            <button col-12 ion-button clear (click)="routrToSignUp()">Sign Up</button>
+        </ion-col>
     </ion-row>
-  </form>
 
-  <ion-row>
-    <ion-col col-6>
-      <button col-12 ion-button clear>Forget Password</button>
-    </ion-col>
-    <ion-col col-6>
-      <button col-12 ion-button clear (click)="routrToSignUp()">Sign Up</button>
-    </ion-col>
-  </ion-row>
-
-  <ion-row class="google-facebook-sign-in">
-    <button col-12 ion-button color="danger" (click)="signInWithGoogle()">
-      <ion-icon name="logo-google" class="icon-in-button"></ion-icon>
-      Sign In By Google
-    </button>
-    <button col-12 ion-button (click)="signInWithFacebook()">
-      <ion-icon name="logo-facebook" class="icon-in-button"></ion-icon>
-      Sign In By Facebook
-    </button>
-  </ion-row>
+    <ion-row class="google-facebook-sign-in">
+        <button col-12 ion-button color="danger" (click)="signInWithGoogle()">
+            <ion-icon name="logo-google" class="icon-in-button"></ion-icon>
+            Sign In By Google
+        </button>
+        <button col-12 ion-button (click)="signInWithFacebook()">
+            <ion-icon name="logo-facebook" class="icon-in-button"></ion-icon>
+            Sign In By Facebook
+        </button>
+    </ion-row>
 
 </ion-content>
