--- a/src/pages/sign-up/sign-up.page.html
+++ b/src/pages/sign-up/sign-up.page.html
@@ -1,9 +1,4 @@
-<!--
-  Generated template for the SignUpPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
     <ion-navbar color="dark">
@@ -41,7 +36,11 @@
             </ion-item>
             <xsource-error *ngIf="signUpForm.submitted && signUpForm?.controls?.password?.invalid"></xsource-error>
 
-            <button ion-button col-12 type="submit" class="signUp-btn" color="dark">Sign up</button>
+            <ion-row justify-content-center>
+                <button ion-button col-6 type="submit" class="margin-top-50" color="dark"><i
+                        class="fa fa-check margin-right-5"></i><span>Sign Up</span>
+                </button>
+            </ion-row>
 
             <div></div>
         </ion-list>
