--- a/src/pages/training-center-details/training-center-details.page.html
+++ b/src/pages/training-center-details/training-center-details.page.html
@@ -1,37 +1,77 @@
 <ion-header>
 
-  <ion-navbar color="dark">
-    <ion-title>{{trainingCenterDetails.name}}</ion-title>
-  </ion-navbar>
+    <ion-navbar color="dark">
+        <ion-title>{{trainingCenterDetails?.name}}</ion-title>
+    </ion-navbar>
 
 </ion-header>
 
 <ion-content class="body">
-  <ion-grid class="header">
-    <ion-row justify-content-center>
-      <ion-col class="logo-container" col-5 col-md-3>
-        <img [src]="trainingCenterDetails.logo">
-        <p class="area"><i class="fa fa-map-marker" aria-hidden="true"></i> {{trainingCenterDetails.area}}</p>
-      </ion-col>
-      <ion-col col-6 align-items-center>
-        <p class="description">
-          {{trainingCenterDetails.description}}
-        </p>
-      </ion-col>
-    </ion-row>
-    <ion-row justify-content-center>
-      <ion-col col-7 *ngIf="showAskQuestion">
-        <button col-12 ion-button (click)="routeToQuestions($event)" color="dark">Have a question<i
-          class="fa fa-question"
-          aria-hidden="true"></i></button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+    <ion-grid class="header">
+        <ion-row justify-content-center>
+            <ion-col class="logo-container" col-5 col-md-3>
+                <img [src]="trainingCenterDetails?.logo">
+                <p class="area"><i class="fa fa-map-marker" aria-hidden="true"></i> {{trainingCenterDetails?.area}}</p>
+            </ion-col>
+            <ion-col col-6 align-items-center>
+                <p class="description">
+                    {{trainingCenterDetails?.about}}
+                </p>
+            </ion-col>
+        </ion-row>
 
-  <div class="page-body">
-    <category [categoryCourses]="categoryCourses"
-              *ngFor="let categoryCourses of trainingCenterDetails?.courses"></category>
-  </div>
+        <ion-row justify-content-center>
+            <ion-col col-6 *ngIf="showAskQuestion">
+                <button col-12 ion-button (click)="routeToQuestions($event)" color="dark">Ask a question</button>
+            </ion-col>
+        </ion-row>
 
+        <ion-row>
+            <div col-12 class="contact-button-container" *ngIf="showAskQuestion" ion-row justify-content-around>
+                <div col-4 ion-row justify-content-center>
+                    <ion-fab>
+                        <button (click)="openFacebookPage()" ion-fab mini>
+                            <ion-icon name="logo-facebook"></ion-icon>
+                        </button>
+                    </ion-fab>
+                </div>
+                <div col-4 ion-row justify-content-center>
+                    <ion-fab #phoneFab>
+                        <button ion-fab mini (click)="checkIfCanCall()">
+                            <ion-icon name="call"></ion-icon>
+                        </button>
+                        <ion-fab-list *ngIf="userData" side="bottom">
+                            <div *ngFor="let phoneNumber of trainingCenterDetails?.phone" ion-row>
+                                <button ion-button color="light" class="margin-bottom-15"
+                                        (click)="makeCall(phoneNumber)">{{phoneNumber}}
+                                </button>
+                            </div>
+                        </ion-fab-list>
+                    </ion-fab>
+                </div>
+                <div col-4 ion-row justify-content-center>
+                    <ion-fab>
+                        <button (click)="openWhatsappChat()" ion-fab mini>
+                            <ion-icon name="logo-whatsapp"></ion-icon>
+                        </button>
+                    </ion-fab>
+                </div>
+            </div>
+        </ion-row>
+    </ion-grid>
+
+    <div class="page-body">
+
+        <!--<ion-grid>-->
+        <!--<ion-row>-->
+        <!--<ion-col>-->
+        <!--&lt;!&ndash;<p>asdasdasd</p>&ndash;&gt;-->
+        <!--</ion-col>-->
+        <!--</ion-row>-->
+        <!--</ion-grid>-->
+
+        <category [categoryCourses]="categoryCourses"
+                  *ngFor="let categoryCourses of trainingCenterDetails?.courses"></category>
+    </div>
 
 </ion-content>
